--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      // Calculate the desired scaling factor (e.g., 80% = 0.8)
+      const scaleFactor = 0.77;
+  
+      // Set the initial zoom level of the page
+      document.body.style.zoom = scaleFactor;
+    </script>
   </body>
 </html>
